# Learning

backend/: application.py  ci_cd.py  database.py  docker.py  logging.py  parsing.py  python.py  queue.py
django_site/deploy/: docker-compose.yaml  pyproject.toml
django_site/django_site/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
django_site/myapp/: admin.py  forms.py  middlewares.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
django_site/myapp/management/commands/: create_order.py  create_products.py  update_order.py  update_user_rules.py
django_site/myapp/templates/admin/: change_list.html  csv_form.html
django_site/myapp/templates/myapp/: 0-base.html  1-my_form.html  5-product_details.html  6-template_tags.html
django_site/myapp/templatetags/: my_tags.py
frontend/: Z-INFO.md  index.html  nginx.conf  script.js
frontend/dynamic/: Dockerfile  uwsgi.ini
python/backend/: application.py
python/django_site/deploy_django/: Dockerfile
python/django_site/django_site/: urls.py
python/django_site/myapp/: middlewares.py  tests.py
python/django_site/myapp/templates/myapp/: 2-rule.html  3-cache.html  4-internationalization.html
python/frontend/: Dockerfile  index.html  script.js  style.css
python/frontend/dynamic/: supervisord.ini
