[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["кас <khromykh.kas@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"  # ^ - значит версия 3.12 или больше
django = "4.2.0"  # строго 4.2.0


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
